# rust-key

./: BUILD_INSTRUCTIONS.md  Cargo.toml  DMG打包详细教程.md  README.md  build.sh  build_enhanced.sh  entitlements copy.plist  entitlements.plist  keyboard_adapter.rs  sign_app.sh  test_keyboard.rs  中文说明文档.md
.claude/: settings.local.json
assets/: app-icon.icns  key-icon.icns  sound_readme.txt
src/: keyboard_adapter.rs  main.rs  main_backup.rs  native_menu.rs  nsevent_listener.rs
